--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Cousera Assignment</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+	<h1>Our Menu</h1>
+<section class= "col-1">
+	<h2>Chicken</h2>
+<p>This is a dummy text. I am just practicing so dont take it serious. I started taking driving lessons at a driving school and the cashier, who was also the receptionist asked me to be there the next day by 8:30 am. When got there the next day neither her nor the driver had arrived. I waited for 30 minutes more before I called her to complainabout this waste of my time. She responded saying “That’s the way it is” and that they would start whenever the driver was around and I was to follow others or “orders?”I asked her if she was implying that there was no importance in keeping to time and she hung up.</p>
+</section>
+<section class= "col-2">
+	<h2>Beef</h2>
+<p>This is a dummy text. I am just practicing so dont take it serious. I started taking driving lessons at a driving school and the cashier, who was also the receptionist asked me to be there the next day by 8:30 am. When got there the next day neither her nor the driver had arrived. I waited for 30 minutes more before I called her to complainabout this waste of my time. She responded saying “That’s the way it is” and that they would start whenever the driver was around and I was to follow others or “orders?”I asked her if she was implying that there was no importance in keeping to time and she hung up.</p>
+</section>
+<section class= "col-3">
+	<h2>Sushi</h2>
+	<p>This is a dummy text. I am just practicing so dont take it serious. I started taking driving lessons at a driving school and the cashier, who was also the receptionist asked me to be there the next day by 8:30 am. When got there the next day neither her nor the driver had arrived. I waited for 30 minutes more before I called her to complainabout this waste of my time. She responded saying “That’s the way it is” and that they would start whenever the driver was around and I was to follow others or “orders?”I asked her if she was implying that there was no importance in keeping to time and she hung up.</p>
+</section>
 </body>
 </html>
