--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
   	<div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
   	<div id="main-content" class="container">
   		<div class="jumbotron">
-  			<img src="../images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+  			<img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
   		</div>
   		<div id="home-tiles" class="row">
   			<div class="col-md-4 col-sm-6 col-xs-12">
