--- a/bday/index.html
+++ b/bday/index.html
@@ -11,29 +11,29 @@
 <h1>HAPPY BIRTHDAY SHINA &#128081;</h1>
 <div class = "gallery">
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994321069586709.jpg" id="clipped">
+    <img src="pics/FB_IMG_15994321069586709.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994319879574031.jpg" id="clipped">
+    <img src="pics/FB_IMG_15994319879574031.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994320120563071.jpg" id="clipped">
+    <img src="pics/FB_IMG_15994320120563071.jpg" id="clipped">
   </div>
     <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994327701502031.jpg" id="clipped">
+    <img src="pics/FB_IMG_15994327701502031.jpg" id="clipped">
   </div>
     <div class="clipped-border">
-    <img src="../pics/FB_IMG_1.jpg" id="clipped">
+    <img src="pics/FB_IMG_1.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_2.jpg" id="clipped">
+    <img src="pics/FB_IMG_2.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994324257668255.jpg
+    <img src="pics/FB_IMG_15994324257668255.jpg
     " id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="../pics/FB_IMG_15994321012545677.jpg
+    <img src="pics/FB_IMG_15994321012545677.jpg
     " id="clipped">
   </div>
   <a id="link1" href="view2/view2.html">Previous Page</a>
