--- a/bday/index.html
+++ b/bday/index.html
@@ -4,40 +4,39 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta  name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>index</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <h1>HAPPY BIRTHDAY SHINA &#128081;</h1>
 <div class = "gallery">
   <div class="clipped-border">
-    <img src="pics/FB_IMG_15994321069586709.jpg" id="clipped">
+    <img src="pics/IMG-20200910-WA0028.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="pics/FB_IMG_15994319879574031.jpg" id="clipped">
+    <img src="pics/IMG-20200910-WA0021.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="pics/FB_IMG_15994320120563071.jpg" id="clipped">
+    <img src="pics/IMG-20200910-WA0027.jpg" id="clipped">
   </div>
     <div class="clipped-border">
-    <img src="pics/FB_IMG_15994327701502031.jpg" id="clipped">
+    <img src="pics/IMG-20200910-WA0026.jpg" id="clipped">
   </div>
     <div class="clipped-border">
-    <img src="pics/FB_IMG_1.jpg" id="clipped">
+    <img src="pics/IMG-20200910-WA0056.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="pics/FB_IMG_2.jpg" id="clipped">
+    <img src="pics/FB_IMG_15994323948379156.jpg" id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="pics/FB_IMG_15994324257668255.jpg
+    <img src="pics/IMG-20200910-WA0057.jpg
     " id="clipped">
   </div>
   <div class="clipped-border">
-    <img src="pics/FB_IMG_15994321012545677.jpg
+    <img src="pics/IMG-20200910-WA0055.jpg
     " id="clipped">
   </div>
-  <a id="link1" href="view2/view2.html">Previous Page</a>
-  <a id="link" href="view3/view3.html">Next: Shina's Hall of Fame</a>
+  <a id="link" target="_blank" href="view3/view3.html">Next. Shina's Hall of Fame. CLICK ME</a>
 </div> 
 </body>
 </html>
