--- a/bday/view1/view1.html
+++ b/bday/view1/view1.html
@@ -9,7 +9,6 @@
 
 </head>
 <body>
-<!--images from http://haryarti.deviantart.com/gallery/-->
  <div class="container">
   
   <ul class="gallery">
@@ -23,8 +22,8 @@
               <div class="text">
                 <h3>MAILUMO SHEILA <br> HAPPY BIRTHDAY <br> DEAR</h3>
                 <p>Wishing You a day filled with happiness and a <br>year filled with joy. HAPPY BIRTHDAY!.<br> Sending  you smiles for every moment of <br>your special days. Have a wonderful <br>time and a very happy birthday!. Hope your <br>special day brings you all that your heart <br>desires!
-                and enjoy your Birthday present on the <br>next page.
-              Click on next page button below since <br>i know you don't know internet.. lol..</p>
+                and enjoy your Birthday present on <br>the next page.
+              Click on next page button <br>below since i know you don't know the internet.. lol..</p>
               </div>
             </div>
           </a>
@@ -33,8 +32,11 @@
     </li>
     
   </ul>
-  <a href="../view2/view2.html" style="background: green; text-decoration: none;
-  color: white;">Next page: Photo Gallery</a>
+  <a href="../view2/view2.html" target="_blank" style="background: green; text-decoration: none;
+  color: white;
+  position: relative;
+  top: -90px; font-size: 30px;"
+  >Next page: Photo Gallery.. Click me</a>
 </div>
 <script src="jquery-3.5.1.min.js"></script>
 <script src="app1.js"></script>
