--- a/bday/view3/view3.html
+++ b/bday/view3/view3.html
@@ -4,14 +4,14 @@
 	<title>view3</title>
   <link rel="stylesheet" type="text/css" href="styles3.css">
 </head>
-<body>    
+<body>
+
 <div class="header">
     <ul class="nav">
-      <li><a href="/" id="view-top-shelf">   Shelf 1
-        <br> Embarassing pics of Shina
+      <li><a href="/" id="view-top-shelf"style="background-color: blue;">Shelf 1
     </a></li>
-      <li><a href="/" id="view-middle-shelf">Shelf 2 <br> Cool Pics of Shina</a></li>
-      <li><a href="/" id="view-bottom-shelf">Shelf 3 <br> Funny pics of Shina</a></li>
+      <li><a href="/" id="view-middle-shelf" style="background-color: blue;">Shelf 2  </a></li>
+      <li><a href="/" id="view-bottom-shelf" style="background-color: blue;">Shelf 3 </a></li>
     </ul>
   </div>
   <div class="scene">
@@ -68,13 +68,13 @@
             <div class="face front">
 
               <a href="#" data-img-url="../photos/1.jpg" class="photocard">
-                <img src="../pics/FB_IMG_15994321496823923.jpg" alt="">
+                <img src="../pics/img1.jpg" alt="">
               </a>
               <a href="#" class="photocard">
-                <img src="../pics/FB_IMG_15994323948379156.jpg" alt="">
+                <img src="../pics/img2.jpg" alt="">
               </a>
               <a href="#" class="photocard">
-                <img src="../pics/FB_IMG_15994319241331835.jpg" alt="">
+                <img src="../pics/img3.jpg" alt="">
               </a>
 
             </div>
